--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:gaming": "vite build --mode gaming",
+    "build:portfolio": "vite build --mode production",
+    "preview": "vite preview",
+    "preview:gaming": "vite preview --outDir dist-gaming",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "deploy:prepare": "npm run lint && npm run build && npm run build:gaming"
   },
   "dependencies": {
     "react": "^19.1.1",
